Got the wrapper to work and also fixed the alignment of the buttons

--- a/src/components/Screen.css
+++ b/src/components/Screen.css
@@ -1,5 +1,5 @@
 .screen {
-    height: 100px;
+    height: 50px;
     width: 100%;
     margin-bottom: 10px;
     padding: 0 10px;
