--- a/src/components/Wrapper.css
+++ b/src/components/Wrapper.css
@@ -1,8 +1,10 @@
-.Wrappepr{
+.wrapper{
     width: 340px;
     height: 540px;
     padding: 10px;
     border-radius: 10px;
-    background-color: #485461;
+    background-color: #46d32a;
     background-image: linear-gradient(315deg, #485461 0%, #28313b 74%);
+    
+    
 }
